# booking-saas

./: .env.example  CLAUDE.md  Dockerfile  LICENSE  README.md  create_superuser.py  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 1c8b27bf1ad3_init.py  d6a632185e5a_tenant_resource_booking.py
app/: main.py
app/core/: config.py  dependencies.py  error_handlers.py  exceptions.py  logging.py  logging_context.py  security.py  timings.py
app/core/middleware/: request_logging.py
app/infra/db/: instrumentation.py  session.py
app/infra/db/models/: __init__.py  booking.py  resource.py  tenant.py
app/modules/auth/: dependencies.py  routes.py  service.py
app/modules/bookings/: dependencies.py  exceptions.py  repository.py  routes.py  schemas.py  service.py
app/modules/health/: dependencies.py  repository.py  routes.py  service.py
app/modules/resources/: dependencies.py  repository.py  routes.py  schemas.py  service.py
app/modules/tenants/: dependencies.py  repository.py  routes.py  schemas.py  service.py
app/modules/users/: dependencies.py  exceptions.py  repository.py  routes.py  schemas.py  service.py
